# cargo-review-deps

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: test_cli.rs
