[package]
name = "cargo-review-deps"
version = "1.0.0-pre.1"
authors = ["Aleksey Kladov <aleksey.kladov@ferrous-systems.com>"]
description = "A cargo subcommand for reviewing the source code of crates.io dependencies"

[dependencies]
failure = "0.1.3"
semver = "0.9.0"
tempdir = "0.3.7"
cargo_metadata = "0.6.2"
copy_dir = "0.1.2"
clap = "2.32.0"

[dev-dependencies]
assert_cmd = "0.10.2"
assert_cli = "0.6.3"
