[package]
name = "cargo-review-deps"
version = "1.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@ferrous-systems.com>"]
description = "A cargo subcommand for reviewing the source code of crates.io dependencies"
repository = "https://github.com/ferrous-systems/cargo-review-deps"
license = "MIT OR Apache-2.0"

[dependencies]
failure = "0.1.3"
semver = "0.9.0"
tempdir = "0.3.7"
cargo_metadata = "0.6.2"
copy_dir = "0.1.2"
clap = "2.32.0"

[dev-dependencies]
assert_cli = "0.6.3"
